:sparkles: [#369] Use identifier field as lookup and generate UUID values by default
Due to interoperability constraints with GPP-app, a separate
uuid field for unique IDs is not viable. Instead, we use a
slug field for the DB field so that a subset of characters
are allowed, most notably slashes are not allowed which
avoids problems with the URL routing.

By default, UUID values are generated, so that for all
intents and purposes it seems like UUIDs are 'the default'.
